--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "predev":"tsoa routes &&  tsoa swagger",
+    "predev":"tsoa swagger",
     "dev": "nodemon -x " ,
-    "start": "ts-node index.ts",
-    "generate": "tsoa routes &&  tsoa swagger"
+    "start": "node dist/index.js",
+    "generate": "tsoa swagger"
   },
   "nodemonConfig": {
     "watch": [
       "src"
     ],
     "ext": "ts",
-    "exec": "ts-node src/index.ts && tsoa routes &&  tsoa swagger"
+    "exec": "ts-node src/index.ts &&tsoa swagger"
   },
   "author": "",
   "license": "ISC",
